2009-06-10  Marek Safar  <marek.safar@gmail.com>

	* TypeForwardedFromAttribute: New file.

2008-04-02  Andreas Nahr  <ClassDevelopment@A-SoftTech.com>

	* IndexerNameAttribute.cs
	* MethodImplAttribute.cs: Fix parameter names

2007-08-28  Zoltan Varga  <vargaz@gmail.com>

	* RuntimeHelpers.cs: Implement RunModuleConstructor ().

2007-01-22  Miguel de Icaza  <miguel@novell.com>

	* RuntimeHelpers.cs: The constrained methods are safe not throwing
	exceptions.  The MonoTODO is enough, no need to throw

2006-11-01  Sebastien Pouliot  <sebastien@ximian.com>

	* RuntimeWrappedException.cs: Add missing GetObjectData method.

2006-08-22  Miguel de Icaza  <miguel@novell.com>

	* MethodImplOptions.cs, MethodCodeType.cs, LoadHint.cs,
	CompilationRelaxations.cs: Add serializable.

2005-12-07  Zoltan Varga  <vargaz@gmail.com>

	* NewConstraintAttribute.cs: Removed.

2005-11-15  Zoltan Varga  <vargaz@gmail.com>

	* RuntimeHelpers.cs: Really fix build.

	* RuntimeHelper.cs: Fix build.
	
	* RuntimeHelpers.cs: Make this class static in 2.0.

	* NewConstraintAttribute.cs: Re-add this as gmcs depends on it.

	* RuntimeHelpers.cs: Net 2.0 RTM updates.

	* NewConstraintAttribute.cs SuppressMergeCheckAttribute.cs: Remove
	obsolete net 2.0 classes.

2005-10-26  Zoltan Varga  <vargaz@gmail.com>

	* IsCopyConstructed.cs: New file.

	* TypeForwardedToAttribute.cs SuppressIldasmAttribute.cs TypeForwardedToAttribute.cs: Add new net 2.0 classes.

	* NGenHint.cs NGenAttribute.cs: Remove obsolete net 2.0 classes.

	* *.cs: Add/remove net 2.0 attributes.

2005-10-07  Zoltan Varga  <vargaz@gmail.com>

	* RuntimeCompatibilityAttribute.cs RuntimeWrappedException.cs: New files.

2005-08-09  Zoltan Varga  <vargaz@freemail.hu>

	* SpecialNameAttribute.cs: New file.

2005-08-06  Gert Driesen <drieseng@users.sourceforge.net>

	* DecimalConstantAttribute.cs: Only mark ctor not CLSCompliant on 2.0 
	profile to match MS.NET.

2005-08-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>
